--- a/host_vars/mtdew.yml
+++ b/host_vars/mtdew.yml
@@ -5,8 +5,10 @@ my_host_name:
 my_domain_name:
     lab
 
-mgt_ip:
-    192.168.100.26
+management:
+    ifd: ge-0/0/0
+    ip: 192.168.100.26
+    subnet_bits: 24
 
 local_timezone:
     America/New_York
