--- a/host_vars/pepsi.yml
+++ b/host_vars/pepsi.yml
@@ -5,8 +5,10 @@ my_host_name:
 my_domain_name:
     lab
 
-mgt_ip:
-    192.168.100.22
+management:
+    ifd: ge-0/0/0
+    ip: 192.168.100.22
+    subnet_bits: 24
 
 local_timezone:
     America/New_York
