--- a/roles/base_system/templates/config_system.yml
+++ b/roles/base_system/templates/config_system.yml
@@ -68,6 +68,13 @@ groups {
                 source-address {{ management.ip }};
             }
         }
+        snmp {
+{% for community in snmp.communities %}
+            community {{ community.name }} {
+                authorization {{ community.auth }};
+            }
+{% endfor %}
+        }
         interfaces {
             {{ management.ifd }} {
                 unit 0 {
