--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ Thumbs.db
 
 # Junos config files           #
 #   and anything named private #
+#   and tmp/ directories       #
 ################################
 junos.conf
 *-private*
+*/tmp/
