--- a/host_vars/gamera.yml
+++ b/host_vars/gamera.yml
@@ -1,20 +1,20 @@
 ---
 my_host_name:
-    mrpibb
+    gamera
 
 my_domain_name:
     lab
 
 management:
     ifd: ge-0/0/0
-    ip: 192.168.100.24
+    ip: 192.168.100.44
     subnet_bits: 24
 
 local_timezone:
     America/New_York
 
 syslog_prefix:
-    MRPIBB
+    GAMERA
 
 packet_based:
-    False
+    True
