--- a/build.pb.yml
+++ b/build.pb.yml
@@ -22,12 +22,13 @@
 # Role based config template building
 # =========================================================
 
-- name: Build system basics for all Junos devices
+- name: Build system basics group for all Junos devices
   hosts: junos
   connection: local
   gather_facts: no
   roles:
     - base_system
+    - apply_groups
 
 - name: Build basic security for Junos firewalls
   hosts: fw_all
@@ -35,6 +36,13 @@
   gather_facts: no
   roles:
     - basic_firewall
+
+- name: Build fabric inventory for QFabric
+  hosts: qfabric
+  connection: local
+  gather_facts: no
+  roles:
+    - qfabric
 
 # =========================================================
 # Finish by assembling config snippets into single file
