--- a/roles/qfabric/tasks/main.yml
+++ b/roles/qfabric/tasks/main.yml
@@ -1,3 +1,12 @@
 ---
+- name: building Qfabric system{} config
+  template: src=config_system.yml dest={{ build_dir }}/00_basic_system.conf
+  
 - name: building Qfabric fabric{} config
-  template: src=config_qfabric.yml dest={{ build_dir }}/10_qfabric.conf
+  template: src=config_qfabric.yml dest={{ build_dir }}/10_fabric.conf
+
+- name: building Qfabric interface{} config
+  template: src=config_qfabric_interface.yml dest={{ build_dir }}/15_qf_interfaces.conf
+
+
+
